--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "sass": "^1.26.5",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
